# num_cpp_Tensor

./: CMakeLists.txt  config.py  func.cpp  func.cu  func.cuh  func.h  main.cpp  main.py  readme.ipynb  readme.md  run.py
examples/: CMakeLists.txt  ex_mat_vec.cpp  ex_ten_basic.cpp  ex_ten_cuda.cpp  examples.h
numcpp/: CMakeLists.txt  explicit_init.cpp  nc_def.h  nc_index.h  nc_init.cpp  nc_init.h  nc_rand.cpp  nc_vec.h  numcpp.cpp  numcpp.h  ten_init.h  ten_print.cpp  ten_print.h  ten_shape.h  tensor.cpp  tensor.h  tensor_arith.cpp  tensor_index.h  tensor_index_utils.cpp  tensor_init.h  z_readme.ipynb  z_readme.md
numcpp/nc_ten/: kern_func.cu  kern_func.cuh  ten_cu.h  ten_print.cpp  ten_shape.h  tensor.cpp  tensor_arith.cpp  tensor_index_utils.cpp
numcpp/nc_vec/: nc_rand.cpp  nc_rand.h  nc_vec.h  numcpp.cpp
numcpp_2D/: CMakeLists.txt  nc_init.cpp  nc_rand.cpp  numcpp.cpp  numcpp.h
z_example/: ex0_rand.ipynb  ex10_init_zero_arange.md  ex11_reshape.md  ex12_index.md  ex13_slice.md  ex14_arithmetic+-.md  ex15_arith_mul_div.md  ex16_hstack_vstack.md  ex1_2D_init.ipynb  ex1_2D_init.md  ex3_Tensor.md  ex5_Tensor.md
z_example/a_vector/: ex0_rand.md
z_example/b_matrix/: ex1_2D_init.md  ex2_2D_oper.md  ex3_2D_oper.md
